2002-10-07    <scott@scottg.net>

	* ca: Created the 'ca' directory to generate and hold test CA
	certs, web server certs, and client certs.

	* tests: Added more files to the tests directory.

2002-10-04    <scott@scottg.net>

	* TODO: Added back to the repository.

	* Makefile: Updated with new targets for tagging and releasing
	code (stolen from Rob Mayoff's nscache Makefile :)

2002-05-28  Scott Goodwin  <scott@scottg.net>

	* init.c: added some user-friendly error messages when key fails
	to load in LoadKey routine.

2002-05-27  Scott Goodwin  <scott@scottg.net>

	* ssl.c: in NsOpenSSLDestroyConn, if socket is valid, we shut it
	down before freeing the ccPtr datastructures. Apparently, the
	BIO_free_all causes two bytes to be sent over the socket that
	confuses Win32 clients. Thanks to Piotr Szuca
	<pszuca@radix.com.pl> for this addition.

2002-04-23  Scott Goodwin  <scott@localhost.localdomain>

	* Makefile: added 'install: all' directive that overrides the
	'install: all' directive in Makefile.module so that I can have the
	install process install https.tcl as well (I need to update the
	online docs). Thanks to Pierre Asselin.

2002-03-05  Scott S. Goodwin  <scott@scottg.net>

	* nsopenssl.c, nsopenssl.c: cleaned up NsOpenSSLDriver and
	Ns_OpenSSLConn structures some more, and cleaned up the
	initialization of an Ns_OpenSSLConn in SockThread. Some items
	weren't being initialized (they aren't yet being used, but should
	still be initialized). Tag: nsopenssl-2_2_beta_4.

	* nsopenssl.c, nsopenssl.h, tclcmds.c: rearranged the
	NsOpenSSLDriver and Ns_OpenSSLConn structures to make it clearer
	what items needed to be freed by what routines. Also changed port
	to peerport in Ns_OpenSSLConn, and added the 'ns_openssl peerport'
	command, which is the same as the 'ns_openssl port' command.  Tag:
	nsopenssl-2_2_beta_3.

	* all: ran *.c and *.h through indent: indent -i2 -br -brs -ce
	-hnl -psl -sob <filename.c>.

2002-03-04  Scott S. Goodwin  <scott@scottg.net>
