@@ -1,11 +1,19 @@
 TODO and IDEAS:
 
-- Add a version.h file, like the one found in nsoracle. See if I can get 
-  tag-release and file-release to automatically update the release number in the file.
+- Add static compilation ability
 
 - Create fully automated tests for nsopenssl that can run without a browser. Issues
   will include how to configure AOLserver's nsd.tcl file for the testing. OpenSSL
   and other programs may be required for testing as well. Not sure how to handle this,
   other than distributing my test and debugging development platform.
+
+- Test Eric's old nsssl key and cert with nsopenssl
+
+- Apply patch to fix OpenSSL version info in nsopenssl.
+
+- Apply patch to make OpenSSL compile with AOLserver 4.x
+
+- Add a version.h file, like the one found in nsoracle. See if I can get 
+  tag-release and file-release to automatically update the release number in the file.
 
 
